<resources>
    <string name="app_name">Delivery App</string>
    <string name="titulo">Realizar os Seus Pedidos</string>
    <string name="titulo_cliente">Ifood</string>
    <string name="titulo_empresa">Ifood - Empresa</string>
    <string name="titulo_novo_produto">Novo Produto</string>
    <string name="titulo_Pedidos">Pedidos</string>
    <string name="titulo_historico_pedidos">Histórico de Compras</string>
    <string name="titulo_cardapio">Cardápio</string>
    <string name="titulo_empresa_configuracao">Configuração Empresa</string>
    <string name="titulo_usuario_configuracao">Configuração Usuário</string>
    <string name="titulo_login">LOGIN</string>
    <string name="nome_email">E-mail:</string>
    <string name="nome_senha">Senha:</string>
    <string name="nome_login">Logar</string>
    <string name="nome_cadastrar">Cadastre-se</string>
    <string name="nome_usuario">Usuário</string>
    <string name="nome_empresa">Empresa</string>
    <string name="botao_login">ACESSAR</string>
    <string name="botao_cadastrar">SALVAR</string>
    <string name="botao_cancelar">CANCELAR</string>
    <string name="confirmar_pedidos">Confirmar Pedidos</string>
    <string name="pedido_realizado">Pedido realizado com sucesso</string>
    <string name="valorTotalCarrinho">Total: R$ 0.00</string>
</resources>